# src/app/services/models/user-dto.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface UserDto {
+  accountLocked?: boolean;
+  email?: string;
+  enabled?: boolean;
+  firstname?: string;
+  lastname?: string;
+}
